syntax = "proto3";

package org.volunteered.libs.proto.recommendation.v1;

option java_multiple_files = true;
option java_outer_classname = "RecommendationServiceProto";
option java_package = "org.volunteered.libs.proto.recommendation.v1";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "org/volunteered/libs/proto/common/v1/common.proto";

service RecommendationService {
  rpc RequestRecommendation(RequestRecommendationRequest) returns (RecommendationRequest);
  rpc GetRecommendationRequestsForOrganization(GetOrganizationRecommendationRequests) returns(GetOrganizationRecommendationRequestsResponse);
  rpc WriteRecommendation(WriteRecommendationRequest) returns (WriteRecommendationResponse);
  rpc GetOrganizationRecommendations(GetOrganizationRecommendationsRequest) returns (GetRecommendationsResponse);
  rpc GetUserRecommendations(GetUserRecommendationsRequest) returns (GetRecommendationsResponse);
}

message RequestRecommendationRequest {
  int64 user_id = 1;
  int64 organization_subsidiary_id = 2;
}

message WriteRecommendation {
  string position_held = 1;
  int32 duration = 2;
  int64 recommender_position_id = 3;
  string body = 4;
  repeated int64 user_ids = 5;
  int64 organization_subsidiary_id = 6;
}

message WriteRecommendationRequest {
  repeated WriteRecommendation recommendations = 1;
}

message GetOrganizationRecommendationsRequest {
  int64 organization_subsidiary_id = 1;
  org.volunteered.libs.proto.common.v1.PaginationRequest pagination = 2;
}

message GetUserRecommendationsRequest {
  int64 user_id = 1;
  org.volunteered.libs.proto.common.v1.PaginationRequest pagination = 2;
}

message Recommendation {
  int64 id = 1;
  string position_held = 2;
  int32 duration = 3;
  int64 recommender_position_id = 4;
  string body = 5;
  int64 organization_subsidiary_id = 7;
  int64 user_id = 8;
}

message RecommendationRequest {
  int64 id = 1;
  int64 user_id = 2;
  int64 organization_subsidiary_id = 3;
  RequestStatus status = 4;
}

message GetRecommendationsResponse {
  repeated Recommendation recommendations = 1;
  org.volunteered.libs.proto.common.v1.PaginationResponse pagination = 2;
}

message GetOrganizationRecommendationRequests {
  int64 organization_subsidiary_id = 1;
  org.volunteered.libs.proto.common.v1.PaginationRequest pagination = 2;
}

message GetOrganizationRecommendationRequestsResponse {
  repeated RecommendationRequest recommendationRequests = 1;
  org.volunteered.libs.proto.common.v1.PaginationResponse pagination = 2;
}
message WriteRecommendationResponse {
  repeated Recommendation recommendations = 1;
}

enum RequestStatus{
  AWAITING_RESPONSE = 0;
  ACCEPTED = 1;
  REJECTED = 2;
}
